Fix Java generic placeholder annotations